download now opens up share menu on mobile, fixed filter icons and updated header

--- a/header.css
+++ b/header.css
@@ -1,15 +1,31 @@
+body, html {
+    margin-top: 0;
+    padding-top: 0;
+}
+
+.fullwidth {
+    width: 100vw;
+    position: relative;
+    top: 0%;
+    left: 50%;
+    right: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw;
+}
+
+
 header {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 1em;
     flex-grow: 1;
     font-size: 1.2em;
     font-family: formiga, sans-serif;
-    background: #e4e3e3;
+    background: #f0f0f0;
     padding: 0.2em;
     overflow: hidden;
+    box-sizing: border-box;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     z-index: 10;
 
