--- a/selfie/selfie.css
+++ b/selfie/selfie.css
@@ -33,7 +33,7 @@ h1 {
 
     #canvas-container {
         position:relative;
-        margin-bottom: 5em;
+        margin-bottom: 2em;
     }
 
     #selfieGIF {
@@ -157,14 +157,10 @@ h1 {
         display: none;
     }
 
-    @media only screen and (width <= 800px) {
+    @media only screen and (width <= 800px) and (height >= 400px) {
         .column {
             width: 100%;
             padding: 1em;
-        }
-
-        #canvas-container {
-            margin-bottom: 5rem;
         }
 
         .mobile-hide {
@@ -172,14 +168,14 @@ h1 {
         }
     }
 
-    @media only screen and (width >= 800px) and (width <= 1200px) and (height >= 800px) {
+    @media only screen and (width >= 800px) and (width <= 1200px) and (height >= 1000px) {
         .mobile-hide {
             display:none;
         }
 
         .column {
             width: 100%;
-            padding: 5em;
+            padding: 0em 10em 2em 10em;
         }
     }
 }
